Implementation nouveau contrat
